fix some small layout bugs

--- a/src/base.less
+++ b/src/base.less
@@ -55,7 +55,7 @@ center {
     width: 100%;
 }
 center.centered {
-    justify-content: center;
+    justify-content: center !important;
 
     &.-b {
         background: black;
@@ -161,6 +161,11 @@ center.centered {
     color: #62620F;
 }
 
+
 .mb {
     margin-top: 20px;
+
+    .f.-hp {
+        background-color: rgba(255,255,255,0.5);
+    }
 }
